@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2017 IBM Corporation and others.
+ * Copyright (c) 2017, 2023 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -29,4 +29,8 @@ compileJava {
             }
         }
     }
+}
+
+test {
+   jvmArgs = ["--add-opens", "java.base/java.io=ALL-UNNAMED"]
 }
